# statisfy.py

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  documentation.html  example.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: docgen.yml  documentation.yaml  sphinx.yaml
_modules/: index.html
_modules/statisfy/: objectify.html  trn.html  twitch.html  youtube.html
_sources/: index.rst.txt
docs/: make.bat  requirements.txt
docs/source/: conf.py  documentation.rst  index.rst  usage.rst
statisfy/: __init__.py  objectify.py  trn.py  twitch.py  youtube.py
statisfy/classes/: trn.py  twitch.py  youtube.py
